Updated dependencies Added getAttachment method to the attachments model Added getLanguages method to the languages model Added getTemplate by slug to the templates model Fixes on the swagger definition The get email template by slug is now fully operational
